# e-commerce-recommendation

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
e_commerce_recommendation/: __init__.py  dataset.py  features.py  plots.py
e_commerce_recommendation/modeling/: predict.py  train.py
notebooks/: eda_dataset.ipynb
