[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "e_commerce_recommendation"
version = "0.0.1"
description = "Recomenda\u00e7\u00e3o de produtos de e-commerce, utilizando clusters de um algoritimo k-means."
authors = [
  { name = "Beatriz Silva \u0026 Leonardo Viana" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.3"


[tool.ruff]
line-length = 99
src = ["e_commerce_recommendation"]
include = ["pyproject.toml", "e_commerce_recommendation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["e_commerce_recommendation"]
force-sort-within-sections = true

